Add jlink distribution profile